Use Locations on 'questions2' endpoint

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,8 @@ ktor-server-core-jvm = { group = "io.ktor", name = "ktor-server-core-jvm", versi
 
 ktor-server-cors-jvm = { group = "io.ktor", name = "ktor-server-cors-jvm", version.ref = "ktor" }
 
+ktor-server-locations = { group = "io.ktor", name = "ktor-server-locations", version.ref = "ktor" }
+
 ktor-server-content-negotiation-jvm = { group = "io.ktor", name = "ktor-server-content-negotiation-jvm", version.ref = "ktor" }
 
 ktor-serialization-kotlinx-json-jvm = { group = "io.ktor", name = "ktor-serialization-kotlinx-json-jvm", version.ref = "ktor" }
